# PredictabilityHorizon

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_quickstart.ipynb
src/predictability_horizon/: __init__.py  calib_systems.py  core.py  experiments.py  gradient_law.py  lyapunov.py  structured_models.py  swingup.py  viz.py  warpsim.py  worldmodel.py
src/predictability_horizon/runners/: cli.py
src/predictability_horizon/systems/: __init__.py  acrobot.py  cartpole.py  pendulum.py
tests/: test_cli.py  test_core.py  test_experiments.py  test_gradient_law.py  test_lyapunov.py  test_structured_models.py  test_swingup.py  test_systems.py  test_viz.py  test_warpsim.py  test_worldmodel.py
writeup/: note.md
