[project]
name = "predictability-horizon"
version = "0.0.1"
description = "Physics-grounded diagnostics for world foundation models in robotics"
authors = [{ name = "Benjamin Strittmatter" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
    "warp-lang>=1.10",
    "torch>=2.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
cosmos = []      # filled in Phase 2
cogvideox = []   # filled in Phase 2
groot = []       # filled in Phase 2

[project.scripts]
predictability-horizon = "predictability_horizon.runners.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predictability_horizon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/predictability_horizon"]

# Warp ships py.typed but leaves much of its runtime API (array methods, wp.Tape,
# wp.init, wp.float32, ...) unannotated, so under --strict every Warp call trips
# no-untyped-call / no-any-return. These two codes are disabled only for the Warp
# wrapper modules; all other strict checks (incompatible types, missing returns,
# etc.) stay on so genuine logic bugs in our own code are still caught.
[[tool.mypy.overrides]]
module = ["predictability_horizon.warpsim", "predictability_horizon.swingup"]
disable_error_code = ["no-untyped-call", "no-any-return"]

# torch ships py.typed but several nn.Module methods (backward, tensor ops that
# return Any) are untyped; suppress the same two codes for worldmodel only.
[[tool.mypy.overrides]]
module = ["predictability_horizon.worldmodel"]
disable_error_code = ["no-untyped-call", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "calibration: marks tests as calibration tests (deselect with '-m \"not calibration\"')",
    "integration: marks tests as integration tests",
]
